# nfflr

./: .buildinfo  .gitignore  .pre-commit-config.yaml  README.md  atoms.html  atoms.ipynb  examples.html  examples.ipynb  genindex.html  index.html  mkdocs.yml  objects.inv  overview.html  py-modindex.html  pyproject.toml  quickstart.html  quickstart.ipynb  search.html  searchindex.js  setup.py
.doctrees/: atoms.doctree  environment.pickle  examples.doctree  index.doctree  overview.doctree  quickstart.doctree
.doctrees/howto/: eam-forces.doctree  force-field-training.doctree  index.doctree  property-regression.doctree  test.doctree
.doctrees/nbsphinx/notebooks/: eam-forces.ipynb
.doctrees/notebooks/: eam-forces.doctree  property-regression.doctree  test.doctree
.doctrees/reference/: api.doctree  index.doctree  models.doctree  nn.doctree  trainer.doctree
.doctrees/tutorials/: atoms.doctree  index.doctree  quickstart.doctree
.github/workflows/: NISTtheDocs2Death.yml  NISTtheDocs2Death.yml.back  docs.yml  main.yml
_modules/: index.html
_modules/nfflr/: atoms.html
_modules/nfflr/data/: atoms.html  dataset.html  datasets.html
_modules/nfflr/nn/: cutoff.html  transform.html
_modules/nfflr/train/: config.html  trainer.html
_sources/: examples.ipynb.txt  overview.md  overview.md.txt  quickstart.ipynb.txt
_sources/howto/: eam-forces.ipynb  index.md  property-regression.ipynb
_sources/notebooks/: property-regression.ipynb.txt  test.ipynb.txt
_sources/reference/: atoms.md  dataset.md  index.md  models.md  nn.md
_sources/tutorials/: atoms.ipynb  index.md  quickstart.ipynb
alignn/: config.py  data.py  dataset.py  graphs.py  train_ff.py  train_folder_grad.py  training_utils.py
alignn/models/: alignn_atomwise.py  alignn_ff.py  alignn_layernorm.py  bond_order.py  utils.py
alignn/tests/: test_alignn_ff.py  test_prop.py
custom_theme/: main.html
docs/: conf.py  data.md  index.md  model.md  quickstart.md  reference.md  requirements.txt  training.md
docs-mkdocs/: data.md  quickstart.md
docs/source/: atoms.ipynb  conf.py  index.md  index.rst  overview.md  quickstart.ipynb  refs.bib
docs/source/_templates/: layout.html  layout_github.html  layout_gitlab.html  modeltemplate.rst
docs/source/howto/: Al99.eam.alloy  Si.tersoff  eam-forces.ipynb  force-field-training.ipynb  property-regression.ipynb
docs/source/notebooks/: eam-forces.ipynb  property-regression.ipynb
docs/source/reference/: api.md  api.rst  atoms.md  dataset.md  index.md  index.rst  models.rst  nn.md  nn.rst  trainer.md
docs/source/tutorials/: atoms.ipynb  quickstart.ipynb
examples/finetune-alignn/: README.md  config.py  pyproject.toml
examples/lammps/: README.org  basic_run.py  pickle_and_run.in
howto/: eam-forces.html  force-field-training.html  index.html  property-regression.html  test.html
nfflr/: __init__.py  ase.py  atoms.py  dataset.py  distributed.py  graph.py  graphs.py  train.py  train_ff.py  training_utils.py
nfflr/data/: __init__.py  asedataset.py  atoms.py  dataset.py  datasets.py  graph.py
nfflr/data/datasets/: alignn.py  deepmd.py  matpes.py  mlearn.py  vasp.py
nfflr/examples/sample_data/: POSCAR-JVASP-107772.vasp  POSCAR-JVASP-13526.vasp  POSCAR-JVASP-1372.vasp  POSCAR-JVASP-14014.vasp  POSCAR-JVASP-14441.vasp  POSCAR-JVASP-14873.vasp  POSCAR-JVASP-15345.vasp  POSCAR-JVASP-1996.vasp  POSCAR-JVASP-27901.vasp  POSCAR-JVASP-28397.vasp  POSCAR-JVASP-28565.vasp  POSCAR-JVASP-48166.vasp  POSCAR-JVASP-50332.vasp  POSCAR-JVASP-60596.vasp  POSCAR-JVASP-60702.vasp  POSCAR-JVASP-64240.vasp  POSCAR-JVASP-64377.vasp  POSCAR-JVASP-64584.vasp  POSCAR-JVASP-64664.vasp  POSCAR-JVASP-655.vasp  POSCAR-JVASP-676.vasp  POSCAR-JVASP-76308.vasp  POSCAR-JVASP-76309.vasp  POSCAR-JVASP-76312.vasp  POSCAR-JVASP-76313.vasp  POSCAR-JVASP-76318.vasp  POSCAR-JVASP-76515.vasp  (+16 more)
nfflr/ff/: config.json  ff.py
nfflr/models/: __init__.py  alignn.py  alignn_atomwise.py  alignn_cgcnn.py  alignn_ff.py  alignn_layernorm.py  bond_order.py  dense_alignn.py  eam.py  gcn.py  lj.py  modified_cgcnn.py  utils.py
nfflr/nn/: __init__.py  cutoff.py  loss.py  norm.py  transform.py
nfflr/tests/: POSCAR-JVASP-7577  test_alignn_ff.py  test_atoms.py  test_graphs.py  test_prop.py
nfflr/train/: __init__.py  config.py  distributed.py  evaluation.py  swag.py  trainer.py  utils.py
notebooks/: eam-forces.html  intro-to-gnn-potentials.ipynb  property-regression.html  property-regression.ipynb  test.html  test.ipynb
reference/: api.html  atoms.html  dataset.html  index.html  models.html  nn.html  trainer.html
tutorials/: atoms.html  index.html  quickstart.html
(+71 files in other folders)
