[build-system]
requires = ["setuptools >= 40.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nfflr"
version = "0.1.1"
requires-python = ">=3.7"
description = "neural force field learning toolkit"
readme = "README.md"
authors = [
    {name = "Brian DeCost", email = "brian.decost@nist.gov"},
    {name = "Kamal Choudhary", email = "kamal.choudhary@nist.gov"}
]
dependencies = [
    "ase",
    "ray[tune]",
    "numpy",
    "scipy",
    "torch",
    "typer",
    "einops",
    "pandas",
    "pykeops",
    "mendeleev",
    "matplotlib",
    "plum-dispatch",
    "pytorch-ignite",
    "py-config-runner",
    "dgl>=0.6.0",
    "jarvis-tools>=2021.07.19"
]

[project.urls]
homepage = "https://pages.nist.gov/nfflr"
documentation = "https://pages.nist.gov/nfflr"
repository = "https://github.com/usnistgov/nfflr"
issues = "https://github.com/usnistgov/nfflr/issues"
# changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"

[project.scripts]
nff = "nfflr.train:cli"
nffd = "nfflr.distributed:main"

[tool.setuptools]
packages = [
    "nfflr",
    "nfflr.data",
    "nfflr.nn",
    "nfflr.nn.layers",
    "nfflr.models",
    "nfflr.models.gnn",
    "nfflr.models.classical",
]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
