[build-system]
requires = ["setuptools >= 40.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nfflr"
version = "0.4.0"
requires-python = ">=3.8"
description = "neural force field learning toolkit"
readme = "README.md"
authors = [
    {name = "Brian DeCost", email = "brian.decost@nist.gov"}
]
dependencies = [
    "ase",
    "ray[tune]",
    "numpy; sys_platform == 'linux'",
    "numpy<2.0.0; sys_platform == 'darwin'",
    "scipy",
    "torch==2.4; sys_platform == 'linux'",
    "torch==2.7.1; sys_platform == 'darwin'",
    "torchdata==0.7.0; sys_platform == 'darwin'",
    "typer",
    "einops",
    "pandas",
    "pynvml",
    "pykeops",
    "pynvml>=11.5.3",
    "lmdb>=1.6.2",
    "mendeleev",
    "matplotlib",
    "cached-path",
    "platformdirs",
    "plum-dispatch",
    "pytorch-ignite",
    "py-config-runner",
    "dgl>=2.4.0; sys_platform == 'linux'",
    "dgl==2.1.0; sys_platform == 'darwin'",
    "jarvis-tools>=2021.07.19"
]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "dgl-cu118"
url = "https://data.dgl.ai/wheels/torch-2.4/cu118/repo.html"
explicit = true
format = "flat"

[[tool.uv.index]]
name = "dgl-cpu"
url = "https://data.dgl.ai/wheels/torch-2.4/repo.html"
explicit = true
format = "flat"

[[tool.uv.index]]
name = "dgl-darwin"
url = "https://data.dgl.ai/wheels/repo.html"
explicit = true
format = "flat"

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
  { index = "pytorch-cu118", marker = "sys_platform == 'linux'" },
]
torchvision = [
  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
  { index = "pytorch-cu118", marker = "sys_platform == 'linux'" },
]
dgl = [
  { index = "dgl-cu118", marker = "sys_platform == 'linux'" },
  { index = "dgl-darwin", marker = "sys_platform == 'darwin'" },
]

[project.urls]
homepage = "https://pages.nist.gov/nfflr"
documentation = "https://pages.nist.gov/nfflr"
repository = "https://github.com/usnistgov/nfflr"
issues = "https://github.com/usnistgov/nfflr/issues"
# changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"

[project.scripts]
nff = "nfflr.train.trainer:cli"
nffd = "nfflr.train.distributed:main"

[tool.setuptools]
packages = [
    "nfflr",
    "nfflr.train",
    "nfflr.data",
    "nfflr.data.datasets",
    "nfflr.nn",
    "nfflr.nn.layers",
    "nfflr.models",
    "nfflr.models.gnn",
    "nfflr.models.classical",
]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
