[project]
name = "finetune-alignn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "alignn>=2024.12.12",
    "nfflr>=0.4.0",
]

[tool.uv.sources]
nfflr = { git = "https://github.com/usnistgov/nfflr", branch = "main" }

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
